@@ -121,7 +121,7 @@ public class HadoopFlowProcess extends FlowProcess<JobConf>
   @Override
   public JobConf getConfigCopy()
     {
-    return new JobConf( jobConf );
+    return HadoopUtil.copyJobConf( jobConf );
     }
 
   /**
@@ -274,7 +274,7 @@ public class HadoopFlowProcess extends FlowProcess<JobConf>
   @Override
   public TupleEntryCollector openTrapForWrite( Tap trap ) throws IOException
     {
-    JobConf jobConf = new JobConf( getJobConf() );
+    JobConf jobConf = HadoopUtil.copyJobConf( getJobConf() );
 
     int stepNum = jobConf.getInt( "cascading.flow.step.num", 0 );
     String partname;
@@ -312,7 +312,7 @@ public class HadoopFlowProcess extends FlowProcess<JobConf>
   @Override
   public JobConf copyConfig( JobConf jobConf )
     {
-    return new JobConf( jobConf );
+    return HadoopUtil.copyJobConf( jobConf );
     }
 
   @Override
